# corsa

./: .gitignore  Makefile  README.md  RESTART.bat  RidgeLink.py  SKILLS.md  START_ADMIN.bat  START_RIG.bat  UPDATE_ADMIN.bat  UPDATE_RIG.bat  bootstrap.py  logs.txt  pyproject.toml  ridgelink.py  test_simhub_json.py
.github/workflows/: build-release.yml
apps/orchestrator/: main.py  state.py
apps/orchestrator/frontend/src/: App.tsx  Kiosk.tsx  Lobby.tsx  index.css
apps/orchestrator/frontend/src/components/: GroupManager.tsx  SessionTimerBar.tsx
apps/orchestrator/routers/: commands.py  leaderboard.py  mumble.py  rigs.py  server.py  settings.py
apps/orchestrator/services/: acserver.py  content_scanner.py  dispatcher.py  heartbeat.py  leaderboard_db.py  mumble_service.py
apps/python/RidgeLink/: RidgeLink.py
apps/sled/: agent.py  command_handler.py  config.py  heartbeat.py  launcher.py  main.py  pyproject.toml  splash.py  telemetry.py
deploy/: build_orchestrator.py  build_sled.py  setup_orchestrator.iss  setup_sled.iss
ridge-link-orchestrator/backend/: main.py
ridge-link-orchestrator/backend/data/: presets.json  telem_config.json
ridge-link-orchestrator/backend/ridge_link_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ridge-link-orchestrator/frontend/src/: App.tsx  Kiosk.tsx
ridge-link-sled/: config.json  ridge_sidecar.py  sled.py  telemetry.py
ridgelink_lua/: init.lua  manifest.ini
scripts/: add_test_lap.py  clear_test_laps.py  test_directx_input.py  test_inputs.py
shared/: constants.py  models.py
storage/: leaderboard.db
