[project]
name = "ridge-link"
version = "2.0.0"
description = "Distributed facility orchestration for racing simulators"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "psutil>=5.9",
    "python-multipart>=0.0.6",
    "requests>=2.31",
    "Pillow>=10.0",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
    "pymumble>=1.7",
]

[tool.setuptools.packages.find]
include = ["apps*", "shared*"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["apps", "shared"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["shared"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
packages = ["apps", "shared"]
explicit_package_bases = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = ["psutil", "cv2", "PIL.*", "pymumble_py3", "pymumble_py3.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["apps.orchestrator.routers.*", "apps.orchestrator.main"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
